fixed css for mobile view - line spacing

--- a/public/css/taps.css
+++ b/public/css/taps.css
@@ -82,6 +82,7 @@ a:hover {
   padding-bottom: 15px;
   text-shadow:0 4px 10px #AAA;
   color:#111;
+  line-height: 1.1em;
 }
 
 .taps-definition {
